--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "node-mailjet": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
